mobile menu works

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,14 @@ img {
   width: 100%;
   position: relative;
 }
+.intro__toggler {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.intro__toggler {
+  display: none;
+}
 .intro__nav, .intro__list {
   display: flex;
   justify-content: space-between;
@@ -71,6 +79,7 @@ img {
 }
 .intro__nav {
   padding: 4rem 2rem 0;
+  flex-wrap: wrap;
 }
 .intro__list li {
   margin-left: 4rem;
@@ -80,6 +89,48 @@ img {
 }
 .intro__list li:hover:not(:last-child) {
   border-bottom: 3px solid white;
+}
+.intro__list--mobile {
+  background-color: white;
+  color: #5a636c;
+  flex: 0 0 100%;
+  margin-top: 5rem;
+  text-align: center;
+  padding: 4rem 2rem 0;
+  position: relative;
+  z-index: 3000;
+  transition: visibility 0.5s, opacity 0.5s linear;
+}
+.intro__list--mobile li {
+  margin-bottom: 4rem;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+.intro__list--mobile li:last-child {
+  color: #5a636c;
+  background-color: #fad400;
+  text-transform: uppercase;
+  padding: 2rem 3rem;
+  border-radius: 30px;
+  font-weight: 600;
+  cursor: pointer;
+  display: inline-block;
+}
+.intro__list--mobile::before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 40px 40px 0px 0;
+  border-color: transparent white transparent transparent;
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  top: -30px;
+  right: 0;
+}
+.intro__list--mobile {
+  display: none;
 }
 .intro__heading {
   text-align: center;
@@ -121,6 +172,31 @@ img {
 .char {
   transform: translateY(-115px);
   transition: transform 0.5s;
+}
+
+.hiddens {
+  visibility: collapse;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s linear;
+}
+
+.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.5s, opacity 0.5s linear;
+}
+
+@media all and (max-width: 600px) {
+  .intro {
+    background-image: url(../images/mobile/image-header.jpg);
+    background-size: contain;
+  }
+  .intro__toggler {
+    display: block;
+  }
+  .intro__list {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
