--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -6,6 +6,16 @@
     width: 100%;
     position: relative;
 
+    &__toggler {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    &__toggler {
+        display: none;
+    }
+
     &__nav, &__list {
         display: flex;
         justify-content: space-between;
@@ -15,9 +25,12 @@
 
     &__nav {
         padding: 4rem 2rem 0;
+        flex-wrap: wrap;
     }
 
-    &__list li {
+    &__list {
+
+     li {
         margin-left: 4rem;
         padding-bottom: .5rem;
         border-bottom: 3px solid transparent;
@@ -26,6 +39,60 @@
         &:hover:not(:last-child) {
             border-bottom: 3px solid $white;
         }
+
+    }
+
+
+    &--mobile {
+        background-color: $white;
+        color: $veryDarkGrayish;
+        flex: 0 0 100%;
+        margin-top: 5rem;
+        text-align: center;
+        padding: 4rem 2rem 0;
+        position: relative;
+        z-index: 3000;
+        transition: visibility 0.5s, opacity 0.5s linear;
+
+            li {
+                margin-bottom: 4rem;
+                font-size: 2.5rem;
+                font-weight: 600;
+
+                &:last-child {
+                    color: $veryDarkGrayish;
+                    background-color: $yellow;
+                    text-transform: uppercase;
+                    padding: 2rem 3rem;
+                    border-radius: 30px;
+                    font-weight: 600;
+                    cursor: pointer;
+                    display: inline-block;
+                }
+            }
+
+            &::before {
+                content: '';
+                width: 0px;
+                height: 0px;
+                border-style: solid;
+                border-width: 40px 40px 0px 0;
+                border-color: transparent $white transparent transparent;
+                display: inline-block;
+                vertical-align: middle;
+                position: absolute;
+                top: -30px;
+                right: 0;
+            }
+
+    }
+
+    &--mobile {
+        display: none;
+    }
+
+
+
     }
 
     &__heading {
@@ -76,3 +143,34 @@
     transform: translateY(-115px);
     transition: transform .5s;
 }
+
+.hiddens {
+    visibility: collapse;
+    opacity: 0;
+    transition: visibility .3s, opacity .3s linear;
+  }
+
+  .visible {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0.5s, opacity 0.5s linear;
+  }
+
+  @media all and (max-width: 600px) {
+    .intro {
+
+        background-image: url(../images/mobile/image-header.jpg);
+        background-size: contain;
+
+        &__toggler {
+            display: block;
+        }
+
+        &__list {
+
+                display: none;
+
+        }
+    }
+
+  }
