main part added

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ img {
 }
 .intro__list--mobile {
   display: none;
+  transition: visibility 0.5s, opacity 0.3s linear;
 }
 .intro__heading {
   text-align: center;
@@ -177,7 +178,7 @@ img {
 .hiddens {
   visibility: collapse;
   opacity: 0;
-  transition: visibility 0.3s, opacity 0.3s linear;
+  transition: visibility 0.5s, opacity 0.3s linear;
 }
 
 .visible {
@@ -186,16 +187,254 @@ img {
   transition: visibility 0.5s, opacity 0.5s linear;
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 760px) {
   .intro {
     background-image: url(../images/mobile/image-header.jpg);
-    background-size: contain;
+    background-size: cover;
   }
+}
+@media all and (max-width: 600px) {
   .intro__toggler {
     display: block;
   }
   .intro__list {
     display: none;
+  }
+}
+.main {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 800px);
+}
+.main__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.main__content--small {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  position: absolute;
+  top: 600px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.main__title {
+  font-family: "Fraunces";
+  font-weight: bold;
+  font-size: 5.5rem;
+}
+.main__title--small {
+  font-family: "Fraunces";
+  font-weight: bold;
+  font-size: 3.5rem;
+  margin-bottom: 3rem;
+}
+.main__paragraph {
+  margin: 3rem 0;
+  font-size: 2rem;
+  line-height: 1.6;
+}
+.main__paragraph--small {
+  line-height: 1.7;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+}
+.main__link {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight: bold;
+  font-family: "Fraunces";
+  position: relative;
+}
+.main__link:after {
+  content: "";
+  width: 105%;
+  height: 15px;
+  background-color: #fad400;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  z-index: -1;
+  opacity: 0.5;
+}
+.main__top--left {
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  background-color: white;
+  color: #23303e;
+}
+.main__top--right {
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  background-image: url("../images/desktop/image-transform.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.main__middle--left {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  background-color: pink;
+  background-image: url("../images/desktop/image-stand-out.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.main__middle--right {
+  background-color: white;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+.main__bottom--left {
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  background-image: url("../images/desktop/image-graphic-design.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #25564b;
+}
+.main__bottom--right {
+  color: #19536b;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  background-image: url("../images/desktop/image-photography.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.main__bottom--right:last-child .main__paragraph--small {
+  width: 85%;
+}
+
+.wrapper {
+  position: relative;
+}
+
+@media all and (max-width: 1079px) {
+  .main__title {
+    font-size: 3.5rem;
+  }
+  .main__title--small {
+    font-size: 2.5rem;
+  }
+  .main__title__link {
+    font-size: 2rem;
+  }
+  .main__paragraph {
+    font-size: 1.8rem .main__paragraph --small;
+    font-size-font-size: 1.6rem;
+  }
+}
+@media all and (max-width: 910px) {
+  .main {
+    grid-template-rows: repeat(4, 800px);
+  }
+  .main__bottom--left {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    background-image: url("../images/desktop/image-graphic-design.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #25564b;
+  }
+  .main__bottom--right {
+    color: #19536b;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    background-image: url("../images/desktop/image-photography.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
+@media all and (max-width: 760px) {
+  .main {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 800px);
+  }
+  .main__top--left {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .main__top--right {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-image: url("../images/mobile/image-transform.jpg");
+  }
+  .main__middle--left {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-color: pink;
+    background-image: url("../images/mobile/image-stand-out.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .main__middle--right {
+    background-color: white;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  .main__bottom--left {
+    grid-row-start: 5;
+    grid-row-end: 6;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-image: url("../images/mobile/image-graphic-design.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #25564b;
+  }
+  .main__bottom--right {
+    color: #19536b;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-image: url("../images/mobile/image-photography.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .main__bottom--right:last-child .main__paragraph--small {
+    width: 85%;
   }
 }
 
