--- a/scss/main.scss
+++ b/scss/main.scss
@@ -164,6 +164,8 @@
             font-size: 2.5rem;
         }
 
+
+
         &__link {
             font-size: 2rem;
         }
@@ -172,9 +174,7 @@
         &__paragraph {
             font-size: 1.8rem
 
-            &--small {
-font-size: 1.6rem;
-        }
+
     }
     }
 }
@@ -215,10 +215,13 @@ font-size: 1.6rem;
 }
 
 @media all and (max-width: 760px) {
+
 .main {
 
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 800px);
+
+
 
     &__top {
 
@@ -288,6 +291,28 @@ font-size: 1.6rem;
             width: 85%;
         }
     }
+
 }
+}
+}
+
+@media all and (max-width: 520px) {
+.main {
+    &__title {
+        font-size: 3rem;
+        &--small {
+            font-size: 2rem;
+        }
+    }
+
+    &__link {
+        font-size: 2rem;
+    }
+
+    &__paragraph {
+        &--small {
+            font-size: 1.8rem;
+        }
+    }
 }
 }
