--- a/scss/testimonials.scss
+++ b/scss/testimonials.scss
@@ -77,15 +77,26 @@ padding: 20rem 3rem;
             padding: 0;
         }
         &__item {
-            width: 45%;
+            max-width: 45%;
         }
     }
 }
 
 @media all and (max-width: 768px) {
     .testimonials {
+        &__title {
+font-size: 2.5rem;
+        }
+        &__name {
+            font-size: 2rem;
+        }
+        &__wrapper {
+            gap: 5rem 1rem;
+            flex-direction: column;
+            align-items: center;
+        }
         &__item {
-            width: 55%;
+            max-width: 80%;
         }
     }
 }
